--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Home Design by Mariel</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hello World!</h1>
   </body>
 </html>
