updated assets and styles.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <body class="body">
     <nav class="nav">
       <div class="nav__logo-container">
-        <img class="nav__logo-img" src="" alt="Home Design Logo" />
+        <img
+          class="nav__logo-container-img"
+          src="assets/home-design-logo.svg"
+          alt="Home Design Logo"
+        />
       </div>
 
       <ul class="nav__list">
