--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <body class="body">
     <nav class="nav">
       <div class="nav__logo-container">
-        <img
-          class="nav__logo-container-img"
-          src="assets/home-design-logo.svg"
-          alt="Home Design Logo"
-        />
+        <a href="#">
+          <img
+            class="nav__logo-container-img"
+            src="assets/home-design-logo.svg"
+            alt="Home Design Logo"
+          />
+        </a>
       </div>
 
       <ul class="nav__list">
@@ -83,7 +85,67 @@
         </ul>
       </section>
 
-      <section class="socials"></section>
+      <section class="socials">
+        <h2 class="socials__heading">
+          Follow&#160;<em>our</em>&#160;&#160;Socials
+        </h2>
+
+        <div class="socials__container">
+          <div class="socials__group">
+            <div class="socials__group-big">
+              <img
+                class="socials__post-image"
+                src="assets/post-1.png"
+                alt="Social media post"
+              />
+            </div>
+
+            <div class="socials__group-col">
+              <div class="socials__group-small">
+                <img
+                  class="socials__post-image"
+                  src="assets/post-2.png"
+                  alt="Social media post"
+                />
+              </div>
+              <div class="socials__group-small">
+                <img
+                  class="socials__post-image"
+                  src="assets/space-2.png"
+                  alt="Social media post"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="socials__group">
+            <div class="socials__group-big">
+              <img
+                class="socials__post-image"
+                src="assets/post-1.png"
+                alt="Social media post"
+              />
+            </div>
+
+            <div class="socials__group-col">
+              <div class="socials__group-small">
+                <img
+                  class="socials__post-image"
+                  src="assets/post-2.png"
+                  alt="Social media post"
+                />
+              </div>
+              <div class="socials__group-small">
+                <img
+                  class="socials__post-image"
+                  src="assets/post-3.png"
+                  alt="Social media post"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer"></footer>
