implemented overlay and fade-in effect for social links

--- a/index.html
+++ b/index.html
@@ -93,54 +93,104 @@
         <div class="socials__container">
           <div class="socials__group">
             <div class="socials__group-big">
-              <img
-                class="socials__post-image"
-                src="assets/post-1.png"
-                alt="Social media post"
-              />
+              <a href="#" class="socials__link">
+                <img
+                  class="socials__post-image"
+                  src="assets/post-1.png"
+                  alt="Social media post"
+                />
+                <div class="socials__post-logo">
+                  <img
+                    src="assets/icons8-instagram-24.svg"
+                    alt="Instagram Logo"
+                  />
+                </div>
+              </a>
             </div>
 
             <div class="socials__group-col">
               <div class="socials__group-small">
-                <img
-                  class="socials__post-image"
-                  src="assets/post-2.png"
-                  alt="Social media post"
-                />
+                <a href="#" class="socials__link">
+                  <img
+                    class="socials__post-image"
+                    src="assets/post-2.png"
+                    alt="Social media post"
+                  />
+                  <div class="socials__post-logo">
+                    <img
+                      src="assets/icons8-instagram-24.svg"
+                      alt="Instagram Logo"
+                    />
+                  </div>
+                </a>
               </div>
+
               <div class="socials__group-small">
-                <img
-                  class="socials__post-image"
-                  src="assets/space-2.png"
-                  alt="Social media post"
-                />
+                <a href="#" class="socials__link">
+                  <img
+                    class="socials__post-image"
+                    src="assets/space-2.png"
+                    alt="Social media post"
+                  />
+                  <div class="socials__post-logo">
+                    <img
+                      src="assets/icons8-instagram-24.svg"
+                      alt="Instagram Logo"
+                    />
+                  </div>
+                </a>
               </div>
             </div>
           </div>
 
           <div class="socials__group">
             <div class="socials__group-big">
-              <img
-                class="socials__post-image"
-                src="assets/post-1.png"
-                alt="Social media post"
-              />
+              <a href="#" class="socials__link">
+                <img
+                  class="socials__post-image"
+                  src="assets/post-1.png"
+                  alt="Social media post"
+                />
+                <div class="socials__post-logo">
+                  <img
+                    src="assets/icons8-instagram-24.svg"
+                    alt="Instagram Logo"
+                  />
+                </div>
+              </a>
             </div>
 
             <div class="socials__group-col">
               <div class="socials__group-small">
-                <img
-                  class="socials__post-image"
-                  src="assets/post-2.png"
-                  alt="Social media post"
-                />
+                <a href="#" class="socials__link">
+                  <img
+                    class="socials__post-image"
+                    src="assets/post-2.png"
+                    alt="Social media post"
+                  />
+                  <div class="socials__post-logo">
+                    <img
+                      src="assets/icons8-instagram-24.svg"
+                      alt="Instagram Logo"
+                    />
+                  </div>
+                </a>
               </div>
+
               <div class="socials__group-small">
-                <img
-                  class="socials__post-image"
-                  src="assets/post-3.png"
-                  alt="Social media post"
-                />
+                <a href="#" class="socials__link">
+                  <img
+                    class="socials__post-image"
+                    src="assets/post-3.png"
+                    alt="Social media post"
+                  />
+                  <div class="socials__post-logo">
+                    <img
+                      src="assets/icons8-instagram-24.svg"
+                      alt="Instagram Logo"
+                    />
+                  </div>
+                </a>
               </div>
             </div>
           </div>
