Completed Integration with Instagram API

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <div class="socials__group-big">
               <a href="#" class="socials__link">
                 <img
+                  id="socials_post-0"
                   class="socials__post-image"
                   src="assets/post-1.png"
                   alt="Social media post"
@@ -112,6 +113,7 @@
               <div class="socials__group-small">
                 <a href="#" class="socials__link">
                   <img
+                    id="socials_post-1"
                     class="socials__post-image"
                     src="assets/post-2.png"
                     alt="Social media post"
@@ -128,6 +130,7 @@
               <div class="socials__group-small">
                 <a href="#" class="socials__link">
                   <img
+                    id="socials_post-2"
                     class="socials__post-image"
                     src="assets/space-2.png"
                     alt="Social media post"
@@ -147,6 +150,7 @@
             <div class="socials__group-big">
               <a href="#" class="socials__link">
                 <img
+                  id="socials_post-3"
                   class="socials__post-image"
                   src="assets/post-1.png"
                   alt="Social media post"
@@ -164,6 +168,7 @@
               <div class="socials__group-small">
                 <a href="#" class="socials__link">
                   <img
+                    id="socials_post-4"
                     class="socials__post-image"
                     src="assets/post-2.png"
                     alt="Social media post"
@@ -180,6 +185,7 @@
               <div class="socials__group-small">
                 <a href="#" class="socials__link">
                   <img
+                    id="socials_post-5"
                     class="socials__post-image"
                     src="assets/post-3.png"
                     alt="Social media post"
@@ -199,5 +205,7 @@
     </main>
 
     <footer class="footer"></footer>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
