fully implemented dynamic load of instagram Posts

--- a/index.html
+++ b/index.html
@@ -92,110 +92,62 @@
 
         <div class="socials__container">
           <div class="socials__group">
-            <div class="socials__group-big">
+            <div id="socials_post-0" class="socials__group-big">
               <a href="#" class="socials__link">
                 <img
-                  id="socials_post-0"
-                  class="socials__post-image"
-                  src="assets/post-1.png"
-                  alt="Social media post"
+                  src="assets/icons8-instagram-24.svg"
+                  alt="Instagram Logo"
                 />
-                <div class="socials__post-logo">
-                  <img
-                    src="assets/icons8-instagram-24.svg"
-                    alt="Instagram Logo"
-                  />
-                </div>
               </a>
             </div>
 
             <div class="socials__group-col">
-              <div class="socials__group-small">
+              <div id="socials_post-1" class="socials__group-small">
                 <a href="#" class="socials__link">
                   <img
-                    id="socials_post-1"
-                    class="socials__post-image"
-                    src="assets/post-2.png"
-                    alt="Social media post"
+                    src="assets/icons8-instagram-24.svg"
+                    alt="Instagram Logo"
                   />
-                  <div class="socials__post-logo">
-                    <img
-                      src="assets/icons8-instagram-24.svg"
-                      alt="Instagram Logo"
-                    />
-                  </div>
                 </a>
               </div>
 
-              <div class="socials__group-small">
+              <div id="socials_post-2" class="socials__group-small">
                 <a href="#" class="socials__link">
                   <img
-                    id="socials_post-2"
-                    class="socials__post-image"
-                    src="assets/space-2.png"
-                    alt="Social media post"
+                    src="assets/icons8-instagram-24.svg"
+                    alt="Instagram Logo"
                   />
-                  <div class="socials__post-logo">
-                    <img
-                      src="assets/icons8-instagram-24.svg"
-                      alt="Instagram Logo"
-                    />
-                  </div>
                 </a>
               </div>
             </div>
           </div>
 
           <div class="socials__group">
-            <div class="socials__group-big">
+            <div id="socials_post-3" class="socials__group-big">
               <a href="#" class="socials__link">
                 <img
-                  id="socials_post-3"
-                  class="socials__post-image"
-                  src="assets/post-1.png"
-                  alt="Social media post"
+                  src="assets/icons8-instagram-24.svg"
+                  alt="Instagram Logo"
                 />
-                <div class="socials__post-logo">
-                  <img
-                    src="assets/icons8-instagram-24.svg"
-                    alt="Instagram Logo"
-                  />
-                </div>
               </a>
             </div>
 
             <div class="socials__group-col">
-              <div class="socials__group-small">
+              <div id="socials_post-4" class="socials__group-small">
                 <a href="#" class="socials__link">
                   <img
-                    id="socials_post-4"
-                    class="socials__post-image"
-                    src="assets/post-2.png"
-                    alt="Social media post"
+                    src="assets/icons8-instagram-24.svg"
+                    alt="Instagram Logo"
                   />
-                  <div class="socials__post-logo">
-                    <img
-                      src="assets/icons8-instagram-24.svg"
-                      alt="Instagram Logo"
-                    />
-                  </div>
                 </a>
               </div>
 
-              <div class="socials__group-small">
+              <div id="socials_post-5" class="socials__group-small">
                 <a href="#" class="socials__link">
                   <img
-                    id="socials_post-5"
-                    class="socials__post-image"
-                    src="assets/post-3.png"
-                    alt="Social media post"
+                    src="assets/icons8-instagram-24.svg"
+                    alt="Instagram Logo"
                   />
-                  <div class="socials__post-logo">
-                    <img
-                      src="assets/icons8-instagram-24.svg"
-                      alt="Instagram Logo"
-                    />
-                  </div>
                 </a>
               </div>
             </div>
