--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="socials__container">
           <div class="socials__group">
             <div id="socials_post-0" class="socials__group-big">
-              <a href="#" class="socials__link">
+              <a id="socials_anchor-0" href="#" class="socials__link">
                 <img
                   src="assets/icons8-instagram-24.svg"
                   alt="Instagram Logo"
@@ -103,7 +103,7 @@
 
             <div class="socials__group-col">
               <div id="socials_post-1" class="socials__group-small">
-                <a href="#" class="socials__link">
+                <a id="socials_anchor-1" href="#" class="socials__link">
                   <img
                     src="assets/icons8-instagram-24.svg"
                     alt="Instagram Logo"
@@ -112,7 +112,7 @@
               </div>
 
               <div id="socials_post-2" class="socials__group-small">
-                <a href="#" class="socials__link">
+                <a id="socials_anchor-2" href="#" class="socials__link">
                   <img
                     src="assets/icons8-instagram-24.svg"
                     alt="Instagram Logo"
@@ -124,7 +124,7 @@
 
           <div class="socials__group">
             <div id="socials_post-3" class="socials__group-big">
-              <a href="#" class="socials__link">
+              <a id="socials_anchor-3" href="#" class="socials__link">
                 <img
                   src="assets/icons8-instagram-24.svg"
                   alt="Instagram Logo"
@@ -134,7 +134,7 @@
 
             <div class="socials__group-col">
               <div id="socials_post-4" class="socials__group-small">
-                <a href="#" class="socials__link">
+                <a id="socials_anchor-4" href="#" class="socials__link">
                   <img
                     src="assets/icons8-instagram-24.svg"
                     alt="Instagram Logo"
@@ -143,7 +143,7 @@
               </div>
 
               <div id="socials_post-5" class="socials__group-small">
-                <a href="#" class="socials__link">
+                <a id="socials_anchor-5" href="#" class="socials__link">
                   <img
                     src="assets/icons8-instagram-24.svg"
                     alt="Instagram Logo"
