added favicon and meta tags for sharable interactive media

--- a/index.html
+++ b/index.html
@@ -5,8 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
-    <title>Home Design by Mariel</title>
+    <!-- Primary Meta Tags -->
+    <title>Home Design By Mariel Ciprian</title>
+    <meta name="title" content="Home Design By Mariel Ciprian" />
+    <meta
+      name="description"
+      content="High-quality designs centered around usability, functionality, and simplicity. My passion for design fueled me to pursue Architecture, Interior Design, and Urban Design. I have 11 years of experience as a professional. Now working in Vancouver, BC, Canada."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Home Design By Mariel Ciprian" />
+    <meta
+      property="og:description"
+      content="High-quality designs centered around usability, functionality, and simplicity. My passion for design fueled me to pursue Architecture, Interior Design, and Urban Design. I have 11 years of experience as a professional. Now working in Vancouver, BC, Canada."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/felixreynoso/homedesignbymariel/main/assets/banner.jpeg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Home Design By Mariel Ciprian" />
+    <meta
+      property="twitter:description"
+      content="High-quality designs centered around usability, functionality, and simplicity. My passion for design fueled me to pursue Architecture, Interior Design, and Urban Design. I have 11 years of experience as a professional. Now working in Vancouver, BC, Canada."
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/felixreynoso/homedesignbymariel/main/assets/banner.jpeg"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body class="body">
     <nav class="nav">
