--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <body class="body">
     <nav class="nav">
       <div class="nav__logo-container">
-        <a href="#">
+        <a href="index.html">
           <img
             class="nav__logo-container-img"
             src="assets/home-design-logo.svg"
@@ -56,9 +56,15 @@
       </div>
 
       <ul class="nav__list">
-        <li class="nav__list-item"><a class="link" href="#">Spaces</a></li>
-        <li class="nav__list-item"><a class="link" href="#">Services</a></li>
-        <li class="nav__list-item"><a class="link" href="#">Latest</a></li>
+        <li class="nav__list-item">
+          <a class="link" href="#spaces-anchor">Spaces</a>
+        </li>
+        <li class="nav__list-item">
+          <a class="link" href="#services-anchor">Services</a>
+        </li>
+        <li class="nav__list-item">
+          <a class="link" href="#socials-anchor">Latest Content</a>
+        </li>
       </ul>
     </nav>
 
@@ -71,7 +77,7 @@
         />
       </header>
 
-      <section class="spaces">
+      <section id="spaces-anchor" class="spaces">
         <ul class="spaces__carousel">
           <li class="spaces__carousel-item spaces__carousel-item--img-1"></li>
           <li
@@ -95,7 +101,7 @@
         </div>
       </section>
 
-      <section class="services">
+      <section id="services-anchor" class="services">
         <div class="services__heading-container">
           <div class="services__heading-line"></div>
           <h2 class="services__heading h2 h2--white">
@@ -105,22 +111,34 @@
         </div>
 
         <ul class="services__list">
-          <a class="services__link" href="#">
-            <li class="services__list-item">Interior Design Service</li>
+          <a
+            class="services__link"
+            target="new"
+            href="https://www.amazon.com/shop/arquidom"
+          >
+            <li class="services__list-item">Shop beautiful pieces</li>
           </a>
-          <a class="services__link" href="#">
-            <li class="services__list-item">A Personal Furniture Shopper</li>
+          <a class="services__link" target="new" href="https://pin.it/c6YyZOB">
+            <li class="services__list-item">Find some inspiration</li>
           </a>
-          <a class="services__link" href="#">
-            <li class="services__list-item">DIY</li>
+          <a
+            class="services__link"
+            target="new"
+            href="https://www.fiverr.com/designsbymariel/do-interior-design-for-any-budget-and-design-style"
+          >
+            <li class="services__list-item">Let's design your dream home</li>
           </a>
-          <a class="services__link" href="#">
-            <li class="services__list-item">Just Find Beautiful Pieces</li>
+          <a
+            class="services__link"
+            target="new"
+            href="https://www.fiverr.com/s/7mw3DW"
+          >
+            <li class="services__list-item">A personal Furniture shopper</li>
           </a>
         </ul>
       </section>
 
-      <section class="socials">
+      <section id="socials-anchor" class="socials">
         <h2 class="socials__heading">
           Follow&#160;<em>our</em>&#160;&#160;Socials
         </h2>
