--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/typewriter.css" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
     <!-- Primary Meta Tags -->
@@ -87,16 +88,17 @@
         </ul>
         <div class="spaces__interactive-heading">
           <h2 class="h2">
-            Let's create
-            <span>
-              <ul class="spaces__words-list">
-                <li>healthy</li>
-                <li>beautiful</li>
-                <li>comfortable</li>
-                <li>timeless</li>
-              </ul>
-            </span>
-            spaces together
+            <span>Let's create</span>
+            <div class="spaces__center-text">
+              <span class="typing-words">
+                <span>healthy</span>
+                <span>beautiful</span>
+                <span>comfortable</span>
+                <span>timeless</span>
+                <span>unique</span>
+              </span>
+            </div>
+            <span>spaces together</span>
           </h2>
         </div>
       </section>
