implemented fully responsive design

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               </a>
             </div>
 
-            <div class="socials__group-col">
+            <div class="socials__group-col socials__group-col--offset">
               <div id="socials_post-4" class="socials__group-small">
                 <a id="socials_anchor-4" href="#" class="socials__link">
                   <img
